2002-01-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Removed a misplaced `static' keyword from the
	generated code. Thanks to Brian Remick <remick@cs.utah.edu>.

2002-01-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DISMAN-SCHEDULE-MIB: updated (RFC 3231).

2002-01-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed segfault on illegal VARIABLES in
	SMIv1 TRAPs. Thanks to <hanule@3ic.co.kr>. Sorry, I cannot determine
	your name in ISO-8859-1. ;-)

	* smi/util.c: Fixed type derivation checks used for TDomain/TAddress
	and InetAddressType/InetAddress checks.

	* tools/dump-xml.c: Added switches to turn DOCTYPE and XML Schema
	specs off.

2002-01-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/CIRCUIT-IF-MIB: added (RFC 3201).

	* mibs/ietf/FRSLD-MIB: added (RFC 3202).

	* tools/smidiff.c: Fixed warning messages on group membership
	changes. Thanks to Bill.
	
2001-12-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-perl.c: Martin Schulz submitted a patch to fix
	the representation of notifications.
	
2001-12-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Added check for incompatible types in SEQUENCE
	item and object type definition. Thanks to Vivekanandan.V
	<vivekav@future.futsoft.com>.

2001-11-23  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.3.tar.gz: released version 0.3.

	* ANNOUNCE: Finalized things for release 0.3.

	* tools/smidiff.c: Torsten Klie <tklie@ibr.cs.tu-bs.de> and
	Juergen Schoenwaelder <schoenw@ibr.cs.tu-bs.de> have spent a
	lot of work on this new tool during the past three months.

2001-10-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Chris Avis <chris@snmptech.com> supplied a
	patch to detect zero value enumeration numbers in SMIv1, which
	is illegal.

2001-09-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed warning on numerical OID DEFVALs.

2001-08-31  Frank Strauss  <strauss@ibr.cs.tu-bs.de>